@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add 'no_fork' option to run_subtest()
+
 1.302073  2016-12-18 23:02:54-08:00 America/Los_Angeles
 
     - No changes from last trial
